--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,11 +7,22 @@
     <title>PromptFeed - Trending AI Prompts</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Prevents FOUC (Flash of Unstyled Content)
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
-              'brand-blue': '#3b82f6',
+              'brand-dark': '#0c111b',
+              'brand-dark-blue': '#192133',
+              'brand-blue': '#1f80e0',
+              'brand-light': '#f9f9f9',
               'brand-purple': '#8b5cf6',
               'brand-pink': '#ec4899',
               'brand-teal': '#14b8a6',
@@ -42,7 +52,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900">
+  <body>
     <div id="root"></div>
   </body>
 </html>
